--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -68,7 +68,7 @@
 
     <div class="absolute inset-0 z-5 opacity-10 bg-[url('https://www.transparenttextures.com/patterns/asfalt-light.png')] mix-blend-overlay"></div>
     <h1 class="text-5xl md:text-7xl font-extrabold text-yellow-400 drop-shadow-lg text-center">Sand World Evil Financing</h1>
-    <p class="mt-6 text-xl text-gray-400 max-w-xl text-center">The official home of the Sand World Minecraft Server.</p>
+    <p class="mt-6 text-xl text-gray-400 max-w-xl text-center"> Global domination through strategic investment and malevolent financial engineering since 1997. </p>
     
     <div class="mt-10 flex flex-col items-center z-20">
       <div class="bg-gray-900 p-4 rounded-lg border border-gray-700 mb-6">
