--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,3 +1,4 @@
+{% include 'privacy_notice.html' %}
 <!-- Footer -->
 <footer class="mt-auto py-8 text-center text-sm text-gray-500 bg-black border-t border-gray-800">
   <div class="mb-2">
